Refactorizaciones y organización de los gestores